--- a/projectname-project/core/pom.xml
+++ b/projectname-project/core/pom.xml
@@ -14,5 +14,12 @@
     <artifactId>meetings-log-core</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-jdbc</artifactId>
+            <version>4.0.0.RELEASE</version>
+        </dependency>
+    </dependencies>
     
 </project>
