--- a/projectname-project/pom.xml
+++ b/projectname-project/pom.xml
@@ -10,6 +10,7 @@
 
   <name>meetings-log-project</name>
 
+
   <modules>
     <module>core</module>
     <module>web</module>
@@ -19,10 +20,19 @@
 
   <!--Project specific properties with versions, db params etc...-->
   <properties>
+    <!--Common versions-->
     <spring.version>4.0.0.RELEASE</spring.version>
     <junit.version>4.11</junit.version>
     <log4j.version>1.2.17</log4j.version>
     <org.slf4j-version>1.7.5</org.slf4j-version>
+
+    <!--java versions-->
+    <java.compiler.sources>1.7</java.compiler.sources>
+    <java.compiler.target>1.7</java.compiler.target>
+
+    <!--Setting encodings-->
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
   </properties>
 
   <dependencies>
@@ -142,5 +152,17 @@
     </repository>
   </repositories>
 
+  <build>
+    <plugins>
+      <plugin>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.1</version>
+        <configuration>
+          <source>${java.compiler.sources}</source>
+          <target>${java.compiler.target}</target>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
 
 </project>
