--- a/projectname-project/web/pom.xml
+++ b/projectname-project/web/pom.xml
@@ -28,5 +28,19 @@
             <version>1.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
-    
+
+    <build>
+        <finalName>Meetings Log portal</finalName>
+        <plugins>
+            <plugin>
+                <groupId>org.mortbay.jetty</groupId>
+                <artifactId>jetty-maven-plugin</artifactId>
+                <version>8.1.14.v20131031</version>
+                <configuration>
+                    <scanIntervalSeconds>5</scanIntervalSeconds>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+
 </project>
