--- a/projectname-project/services/pom.xml
+++ b/projectname-project/services/pom.xml
@@ -20,5 +20,11 @@
             <artifactId>meetings-log-core</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-test</artifactId>
+            <version>4.0.0.RELEASE</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 </project>
