--- a/projectname-project/web/pom.xml
+++ b/projectname-project/web/pom.xml
@@ -27,6 +27,11 @@
             <artifactId>meetings-log-core</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <!--<dependency>-->
+            <!--<groupId>org.springmodules</groupId>-->
+            <!--<artifactId>spring-modules-validation</artifactId>-->
+            <!--<version>0.8</version>-->
+        <!--</dependency>-->
     </dependencies>
 
     <build>
