--- a/projectname-project/core/src/main/resources/META-INF/data/jdbc.conf
+++ b/projectname-project/core/src/main/resources/META-INF/data/jdbc.conf
@@ -2,4 +2,4 @@ jdbc.url=jdbc:hsqldb:mem:meetingslog_db;shutdown=false
 jdbc.drvName=org.hsqldb.jdbcDriver
 jdbc.username=SA
 jdbc.pass=
-jdbc.schema=/META-INF/data/schema.sql
+jdbc.schema=classpath:/META-INF/data/schema.sql
