New mode Role added User model and DAO changed Role DAO added UserDAO tested.

--- a/projectname-project/core/src/main/resources/META-INF/data/jdbc.conf
+++ b/projectname-project/core/src/main/resources/META-INF/data/jdbc.conf
@@ -1,5 +1,12 @@
-jdbc.url=jdbc:hsqldb:mem:meetingslog_db;shutdown=false
-jdbc.drvName=org.hsqldb.jdbcDriver
-jdbc.username=SA
-jdbc.pass=
+
+#jdbc.url=jdbc:hsqldb:mem:meetingslog_db;allowMultiQueries=true;shutdown=false
+#jdbc.drvName=org.hsqldb.jdbcDriver
+#jdbc.username=SA
+#jdbc.pass=
+
+jdbc.url=jdbc:mysql://localhost:3306/meetingslog_db?allowMultiQueries=true
+jdbc.drvName=com.mysql.jdbc.Driver
+jdbc.username=SpringDev
+jdbc.pass=123qweasdzxc
+
 jdbc.schema=/META-INF/data/schema.sql
