--- a/projectname-project/pom.xml
+++ b/projectname-project/pom.xml
@@ -21,6 +21,7 @@
   <!--Project specific properties with versions, db params etc...-->
   <properties>
     <!--Common versions-->
+    <spring.security.version>3.2.5.RELEASE</spring.security.version>
     <spring.version>4.0.0.RELEASE</spring.version>
     <junit.version>4.11</junit.version>
     <log4j.version>1.2.17</log4j.version>
@@ -66,6 +67,16 @@
       <groupId>org.springframework</groupId>
       <artifactId>spring-webmvc</artifactId>
       <version>${spring.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.security</groupId>
+      <artifactId>spring-security-web</artifactId>
+      <version>${spring.security.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.security</groupId>
+      <artifactId>spring-security-config</artifactId>
+      <version>${spring.security.version}</version>
     </dependency>
 
     <!-- CGLIB, only required and used for @Configuration usage -->
