Default role assigning for new user implemented.

--- a/projectname-project/core/src/main/resources/META-INF/data/jdbc.conf
+++ b/projectname-project/core/src/main/resources/META-INF/data/jdbc.conf
@@ -9,4 +9,4 @@ jdbc.drvName=com.mysql.jdbc.Driver
 jdbc.username=SpringDev
 jdbc.pass=123qweasdzxc
 
-jdbc.schema=/META-INF/data/schema.sql
+jdbc.schema=classpath:/META-INF/data/schema.sql
