--- a/projectname-project/web/pom.xml
+++ b/projectname-project/web/pom.xml
@@ -32,7 +32,7 @@
 			<artifactId>meetings-log-core</artifactId>
 			<version>1.0-SNAPSHOT</version>
 		</dependency>
-		<dependency>
+		<!--<dependency>
 			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-web</artifactId>
 			<version>${spring.version}</version>
@@ -41,7 +41,7 @@
 			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-config</artifactId>
 			<version>${spring.version}</version>
-		</dependency>
+		</dependency>-->
 	</dependencies>
 
 	<build>
