--- a/projectname-project/core/pom.xml
+++ b/projectname-project/core/pom.xml
@@ -14,19 +14,23 @@
     <artifactId>meetings-log-core</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+    <properties>
+        <spring.version>4.0.0.RELEASE</spring.version>
+    </properties>
+
     <dependencies>
 
 
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-jdbc</artifactId>
-            <version>4.0.0.RELEASE</version>
+            <version>${spring.version}</version>
         </dependency>
 
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-test</artifactId>
-            <version>4.1.1.RELEASE</version>
+            <version>${spring.version}</version>
             <scope>test</scope>
         </dependency>
 
