--- a/projectname-project/web/pom.xml
+++ b/projectname-project/web/pom.xml
@@ -16,6 +16,11 @@
 
 	<packaging>war</packaging>
 
+	<properties>
+		<apache.tiles>3.0.5</apache.tiles>
+		<slf4j.log4f>1.5.8</slf4j.log4f>
+	</properties>
+
 	<dependencies>
 		<dependency>
 			<groupId>org.artdevs.meetingslog.facades</groupId>
@@ -27,6 +32,26 @@
 			<artifactId>meetings-log-core</artifactId>
 			<version>1.0-SNAPSHOT</version>
 		</dependency>
+
+		<dependency>
+			<groupId>org.apache.tiles</groupId>
+			<artifactId>tiles-core</artifactId>
+			<version>${apache.tiles}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.apache.tiles</groupId>
+			<artifactId>tiles-jsp</artifactId>
+			<version>${apache.tiles}</version>
+		</dependency>
+
+		<!--<dependency>-->
+			<!--<groupId>org.slf4j</groupId>-->
+			<!--<artifactId>slf4j-log4j12</artifactId>-->
+			<!--<version>${slf4j.log4f}</version>-->
+		<!--</dependency>-->
+
+
 	</dependencies>
 
 	<build>
