removed credentials from jdbc.conf

--- a/projectname-project/core/src/main/resources/META-INF/data/jdbc.conf
+++ b/projectname-project/core/src/main/resources/META-INF/data/jdbc.conf
@@ -6,7 +6,7 @@
 
 jdbc.url=jdbc:mysql://localhost:3306/meetingslog_db?allowMultiQueries=true
 jdbc.drvName=com.mysql.jdbc.Driver
-jdbc.username=SpringDev
-jdbc.pass=123qweasd
+jdbc.username=
+jdbc.pass=
 
 jdbc.schema=classpath:/META-INF/data/schema.sql
