Fixed some details in facade test and created service test

--- a/projectname-project/core/src/main/resources/META-INF/data/jdbc.conf
+++ b/projectname-project/core/src/main/resources/META-INF/data/jdbc.conf
@@ -7,6 +7,6 @@
 jdbc.url=jdbc:mysql://localhost:3306/meetingslog_db?allowMultiQueries=true
 jdbc.drvName=com.mysql.jdbc.Driver
 jdbc.username=root
-jdbc.pass=ArtemiY
+jdbc.pass=80509167251
 
 jdbc.schema=classpath:/META-INF/data/schema.sql
