--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+resources/META-INF/data/jdbc.conf
+
 ################################################################################
 ### we don't need generated sources and ide specific folder in our repository
 ################################################################################
@@ -5,7 +7,6 @@
 .idea/*
 target/*
 target
-
 
 ### Java template
 *.class
@@ -21,13 +22,11 @@ target
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 
-
 ### Linux template
 *~
 
 # KDE directory preferences
 .directory
-
 
 ### Eclipse template
 *.pydevproject
@@ -64,37 +63,10 @@ local.properties
 
 ### JetBrains template
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm
-
 *.iml
 
 ## Directory-based project format:
 .idea/
-# if you remove the above rule, at least ignore the following:
-
-# User-specific stuff:
-# .idea/workspace.xml
-# .idea/tasks.xml
-# .idea/dictionaries
-
-# Sensitive or high-churn files:
-# .idea/dataSources.ids
-# .idea/dataSources.xml
-# .idea/sqlDataSources.xml
-# .idea/dynamic.xml
-# .idea/uiDesigner.xml
-
-# Gradle:
-# .idea/gradle.xml
-# .idea/libraries
-
-# Mongo Explorer plugin:
-# .idea/mongoSettings.xml
-
-## File-based project format:
-*.ipr
-*.iws
-
-## Plugin-specific files:
 
 # IntelliJ
 out/
@@ -117,6 +89,3 @@ crashlytics-build.properties
 *.un~
 Session.vim
 .netrwhist
-*~
-
-
